--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,9 @@ fastauth = "fastauth:main"
 [build-system]
 requires = ["uv_build>=0.9.7,<0.10.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "isort>=7.0.0",
+    "ruff>=0.14.9",
+]
