--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "argon2-cffi>=25.1.0",
     "fastapi[standard]>=0.125.0",
+    "passlib[argon2]>=1.7.4",
 ]
 
 [build-system]
