--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "argon2-cffi>=25.1.0",
     "fastapi[standard]>=0.125.0",
     "passlib[argon2]>=1.7.4",
+    "pyjwt>=2.10.1",
 ]
 
 [build-system]
